--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
         </div>
       </div>
 
-      <!-- Add this just below the Tavily API Key input -->
+      <!-- Replace the existing folder selection div with this -->
       <div class="flex items-center mt-2">
-        <textarea
-          id="search-urls"
-          placeholder="Enter URLs to search (one per line)"
-          class="border rounded p-2 mr-2 flex-grow h-24"
-        ></textarea>
         <button
-          onclick="saveSearchUrls()"
-          class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600"
+          onclick="selectFolder()"
+          class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600 mr-2"
         >
-          Save URLs
+          Select Folder
         </button>
+        <span id="selected-folder">No folder selected</span>
+        <div id="indexing-progress" class="ml-2 hidden">
+          <span class="material-icons animate-spin">refresh</span>
+          <span>Indexing...</span>
+        </div>
       </div>
 
       <div class="flex mb-4 relative">
@@ -479,6 +479,46 @@
           showStepLog(step);
         }
       });
+
+      // Add this function to your script section
+      async function selectFolder() {
+        const folderPath = await ipcRenderer.invoke("select-folder");
+        if (folderPath) {
+          document.getElementById("selected-folder").textContent = folderPath;
+          document
+            .getElementById("indexing-progress")
+            .classList.remove("hidden");
+          try {
+            const result = await ipcRenderer.invoke(
+              "load-or-create-vector-store",
+              folderPath
+            );
+            if (result.success) {
+              alert("Folder indexed successfully!");
+            } else {
+              throw new Error(result.error);
+            }
+          } catch (error) {
+            alert(`Error indexing folder: ${error.message}`);
+          } finally {
+            document
+              .getElementById("indexing-progress")
+              .classList.add("hidden");
+          }
+        }
+      }
+
+      // Add this to your existing script
+      async function loadSavedFolder() {
+        const savedFolder = await ipcRenderer.invoke("get-selected-folder");
+        if (savedFolder) {
+          document.getElementById("selected-folder").textContent = savedFolder;
+          await ipcRenderer.invoke("load-or-create-vector-store", savedFolder);
+        }
+      }
+
+      // Call this function when the page loads
+      loadSavedFolder();
     </script>
   </body>
 </html>
