--- a/index.html
+++ b/index.html
@@ -43,71 +43,25 @@
     </style>
   </head>
   <body class="bg-gray-100 p-8">
-    <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md p-6">
+    <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md p-6 relative">
       <h1 class="text-2xl font-bold mb-4">Electron LangGraph RAG</h1>
 
+      <!-- Settings icon -->
+      <button id="settingsButton" class="absolute top-4 right-4">
+        <span class="material-icons">settings</span>
+      </button>
+
+      <!-- Ollama status indicator -->
       <div class="flex items-center mb-4">
         <div
           id="ollama-status"
           class="w-4 h-4 rounded-full bg-gray-400 mr-2"
         ></div>
-        <select id="model-select" class="border rounded p-2 mr-2">
-          <option value="">Select a model</option>
-        </select>
-        <button
-          onclick="loadModels()"
-          class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
-        >
-          Load Models
-        </button>
-        <button
-          onclick="testOllama()"
-          class="ml-2 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600"
-        >
-          Test Ollama
-        </button>
+        <span id="selected-model">No model selected</span>
       </div>
 
-      <!-- Replace the Tavily API Key input with this -->
-      <div class="flex items-center mt-2">
-        <button
-          onclick="toggleTavilyApiKeyInput()"
-          class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600 mr-2"
-        >
-          <span class="material-icons">vpn_key</span>
-        </button>
-        <div id="tavily-api-key-container" class="hidden flex-grow">
-          <input
-            type="text"
-            id="tavily-api-key"
-            placeholder="Enter Tavily API Key"
-            class="border rounded p-2 mr-2 w-full"
-          />
-          <button
-            onclick="saveTavilyApiKey()"
-            class="bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600"
-          >
-            Save API Key
-          </button>
-        </div>
-      </div>
-
-      <!-- Add this after the Tavily API Key input -->
-      <div class="flex items-center mt-2">
-        <label class="flex items-center cursor-pointer">
-          <div class="relative">
-            <input type="checkbox" id="tavily-search-toggle" class="sr-only" />
-            <div class="block bg-gray-600 w-14 h-8 rounded-full"></div>
-            <div
-              class="dot absolute left-1 top-1 bg-white w-6 h-6 rounded-full transition"
-            ></div>
-          </div>
-          <div class="ml-3 text-gray-700 font-medium">Enable Tavily Search</div>
-        </label>
-      </div>
-
-      <!-- Replace the existing folder selection div with this -->
-      <div class="flex items-center mt-2">
+      <!-- Folder selection -->
+      <div class="flex items-center mt-2 mb-4">
         <button
           onclick="selectFolder()"
           class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600 mr-2"
@@ -121,6 +75,7 @@
         </div>
       </div>
 
+      <!-- Question input and ask button -->
       <div class="flex mb-4 relative">
         <input
           type="text"
@@ -192,6 +147,101 @@
         class="mt-4 p-4 bg-gray-100 rounded hidden overflow-auto max-h-96"
       ></div>
       <div id="result" class="mt-4 p-4 bg-gray-100 rounded"></div>
+    </div>
+
+    <!-- Settings Modal -->
+    <div
+      id="settingsModal"
+      class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden"
+    >
+      <div
+        class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white"
+      >
+        <div class="mt-3">
+          <h3 class="text-lg leading-6 font-medium text-gray-900 mb-4">
+            Settings
+          </h3>
+
+          <!-- Model selection -->
+          <div class="mb-4">
+            <label
+              for="model-select"
+              class="block text-sm font-medium text-gray-700 mb-2"
+              >Select Model</label
+            >
+            <select id="model-select" class="w-full border rounded p-2">
+              <option value="">Select a model</option>
+            </select>
+          </div>
+
+          <!-- Load and Test Model buttons -->
+          <div class="flex mb-4">
+            <button
+              onclick="loadModels()"
+              class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 mr-2"
+            >
+              Load Models
+            </button>
+            <button
+              onclick="testOllama()"
+              class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600"
+            >
+              Test Ollama
+            </button>
+          </div>
+
+          <!-- Tavily API Key input -->
+          <div class="mb-4">
+            <label
+              for="tavily-api-key"
+              class="block text-sm font-medium text-gray-700 mb-2"
+              >Tavily API Key</label
+            >
+            <input
+              type="text"
+              id="tavily-api-key"
+              placeholder="Enter Tavily API Key"
+              class="w-full border rounded p-2"
+            />
+            <button
+              onclick="saveTavilyApiKey()"
+              class="mt-2 bg-purple-500 text-white px-4 py-2 rounded hover:bg-purple-600 w-full"
+            >
+              Save API Key
+            </button>
+          </div>
+
+          <!-- Tavily Search toggle -->
+          <div class="flex items-center mb-4">
+            <label class="flex items-center cursor-pointer">
+              <div class="relative">
+                <input
+                  type="checkbox"
+                  id="tavily-search-toggle"
+                  class="sr-only"
+                />
+                <div class="block bg-gray-600 w-14 h-8 rounded-full"></div>
+                <div
+                  class="dot absolute left-1 top-1 bg-white w-6 h-6 rounded-full transition"
+                ></div>
+              </div>
+              <div class="ml-3 text-gray-700 font-medium">
+                Enable Tavily Search
+              </div>
+            </label>
+          </div>
+
+          <!-- Close button -->
+          <div class="mt-4">
+            <button
+              id="closeSettingsButton"
+              class="px-4 py-2 bg-gray-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script>
@@ -341,9 +391,13 @@
 
       function updateStatus() {
         const statusElement = document.getElementById("ollama-status");
+        const selectedModelElement = document.getElementById("selected-model");
         statusElement.className = isConnected
           ? "w-4 h-4 rounded-full bg-green-500"
           : "w-4 h-4 rounded-full bg-red-500";
+        selectedModelElement.textContent = isConnected
+          ? `Model: ${lastTestedModel}`
+          : "No model selected";
       }
 
       function disableInterface(disable) {
@@ -556,6 +610,56 @@
 
       // Call this function when the page loads
       loadSavedFolder();
+
+      // Add these lines near the top of your script section
+      const settingsButton = document.getElementById("settingsButton");
+      const settingsModal = document.getElementById("settingsModal");
+      const closeSettingsButton = document.getElementById(
+        "closeSettingsButton"
+      );
+
+      // Function to open the settings modal
+      function openSettingsModal() {
+        settingsModal.classList.remove("hidden");
+      }
+
+      // Function to close the settings modal
+      function closeSettingsModal() {
+        settingsModal.classList.add("hidden");
+      }
+
+      // Event listeners for opening and closing the settings modal
+      settingsButton.addEventListener("click", openSettingsModal);
+      closeSettingsButton.addEventListener("click", closeSettingsModal);
+
+      // Close the modal if the user clicks outside of it
+      window.addEventListener("click", function (event) {
+        if (event.target === settingsModal) {
+          closeSettingsModal();
+        }
+      });
+
+      // Add this function to load settings when opening the modal
+      async function loadSettings() {
+        // Load Tavily API key
+        const tavilyApiKey = await ipcRenderer.invoke("get-tavily-api-key");
+        document.getElementById("tavily-api-key").value = tavilyApiKey || "";
+
+        // Load Tavily search setting
+        const tavilyEnabled = await ipcRenderer.invoke(
+          "get-tavily-search-enabled"
+        );
+        document.getElementById("tavily-search-toggle").checked = tavilyEnabled;
+
+        // Load models
+        await loadModels();
+      }
+
+      // Update the openSettingsModal function
+      function openSettingsModal() {
+        settingsModal.classList.remove("hidden");
+        loadSettings();
+      }
     </script>
   </body>
 </html>
