--- a/refactored/public/index.html
+++ b/refactored/public/index.html
@@ -5,7 +5,7 @@
     <title>RAG Application</title>
   </head>
   <body>
-    <h1>RAG Application</h1>
-    <div id="app"></div>
+    <div id="root"></div>
+    <script src="../dist/renderer/index.js"></script>
   </body>
 </html>
