--- a/refactored/public/index.html
+++ b/refactored/public/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>RAG Application</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Inter", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
